--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="tab_neighbour_title">My neighbours</string>
     <string name="tab_favorites_title">Favorites</string>
     <string name="activity_new_neighbour">New neighbour</string>
+    <string name="user_avatar">user avatar</string>
+    <string name="location_icon">location icon</string>
+    <string name="phone_icon">phone icon</string>
+    <string name="globe_icon">globe icon</string>
+    <string name="a_propos_de_moi">A propos de moi</string>
+    <string name="star">Star</string>
+    <string name="return_arrow">Return arrow</string>
 </resources>
